# cs327a

./: .gitmodules  README.md  p1-main.cpp
cs327a/: .gitignore  CMakeLists.txt  README.md
cs327a/hw1/: CMakeLists.txt  p1-main.cpp
cs327a/hw1_sol/: CMakeLists.txt  p1-main-sol.cpp
cs327a/hw2/: CMakeLists.txt  p1-main.cpp  p2-main.cpp  p3-main.cpp  world_3_iiwa.urdf
cs327a/hw4/: CMakeLists.txt  hw4-p1-interfaces.html  keys.h  p1-launch.sh  p1-main-interfaces.cpp  p2-main.cpp  world_1_puma.urdf  world_2_puma.urdf
cs327a/resources/panda/: panda_arm.urdf  panda_arm_base.urdf
cs327a/resources/puma/: puma_gripper.urdf
cs327a/src/force_sensor/: ForceSensorDisplay.h  ForceSensorSim.h
cs327a/src/geometry/: CapsuleDistanceHull.h
sai2-simulation-master/: CMakeLists.txt  SAI2-SIMULATIONConfig.cmake.in
sai2-simulation-master/src/: version
sai2-simulation-master/src/distance/: CDynBSphere.cpp  CDynCover.cpp  CDynDist.cpp  CDynHierarchy.cpp  CDynPrim.cpp
sai2-simulation-master/src/dynamics/: CDynABDynamics.cpp  CDynABJoint.cpp  CDynABNode.cpp  CDynDynamics.cpp
sai2-simulation-master/src/extras/: CDynHull.cpp
sai2-simulation-master/src/global/: CDynGlobal.cpp
sai2-simulation-master/src/matrix/: CDynMatrix6.cpp  CDynVector6.cpp
sai2-simulation-master/src/node/: CDynAttractConstraint.cpp  CDynBaseNode.cpp  CDynBound.cpp  CDynCollision.cpp  CDynCollisionCheckRecord.cpp  CDynConstraint.cpp  CDynConstraintList.cpp  CDynContact.cpp  CDynContactList.cpp  CDynContactPoint.cpp  CDynContactPointCache.cpp  CDynFrictionRecord.cpp  CDynJointLimit.cpp  CDynPrimPair.cpp  (+5 more)
(+21 files in other folders)
